feat(harness): Android target end-to-end (D-harness.v2)
The first time the renderer-agnostic claim from DESIGN § 4 is enforced
end-to-end at the harness level: same scenario set, same protocol
assertions, only the launcher and baselines differ between targets.
After v2, "preview daemon JVM speaks the v1 wire format" is a
CI-enforced contract on both Robolectric and Skiko backends.

-Ptarget=desktop|android parameter wired through the harness's test
infra. Default desktop. Tests skip via Assume.assumeTrue when the
target doesn't match. Three modes now run on every PR:
  - desktop-fake (default; the seven existing scenarios against
    FakeHost in 7s)
  - desktop-real (against :renderer-desktop-daemon in 13s)
  - android-real (against :renderer-android-daemon in 44s)

New :tools:daemon-harness components:
  - RealAndroidHarnessLauncher — same DaemonMain entry point as
    desktop, plus the --add-opens JVM args + Robolectric system
    properties from AndroidPreviewClasspath.buildJvmArgs /
    buildSystemProperties. classpathFromProperty helper reads the
    descriptor file the daemon module produces (see below).
  - HarnessTestSupport.harnessTarget() reader; baselineFile() now
    target-aware (baselines/<target>/<scenario>/<id>.png).
  - realAndroidModeScenario(...) builder mirroring
    realModeScenario(...) but with longer timeouts.

New :renderer-android-daemon main file:
  - PreviewManifestRouter — Android counterpart of desktop's. Same
    shape: wraps RobolectricHost when composeai.harness.previewsManifest
    sysprop is set; production launches without the sysprop are
    unaffected. Per Option A in the v2 brief — duplicated, not
    promoted to :renderer-daemon-core (RenderSpec is still
    duplicated per backend).

Test layout: Option A (parallel test classes) over Option B
(parameterized JUnit). Trade-off encountered:
  1. Per-target timeouts diverge — Robolectric cold ~5s vs desktop
     ~600ms. Android tests budget pollNotification at 120-180s;
     deskt