@@ -129,3 +129,133 @@ class RealDesktopHarnessLauncher(
       .start()
   }
 }
+
+/**
+ * Spawns the real Android daemon — `ee.schimke.composeai.daemon.DaemonMain` from
+ * `:renderer-android-daemon` — for D-harness.v2's `-Ptarget=android` mode.
+ *
+ * **The JVM entry point is identical to the desktop launcher.** The package is
+ * `ee.schimke.composeai.daemon` in both modules, just different runtime classpaths. The Android
+ * module's `DaemonMain` constructs a
+ * [`RobolectricHost`][ee.schimke.composeai.daemon.RobolectricHost] (mirroring the desktop module's
+ * `DesktopHost`) and wraps it in `PreviewManifestRouter` when `composeai.harness.previewsManifest`
+ * is set — exactly the same shape as the desktop launcher.
+ *
+ * **Classpath resolution.** Same Option A pattern as [RealDesktopHarnessLauncher]: the harness adds
+ * `testImplementation(project(":renderer-android-daemon"))` +
+ * `testImplementation(testFixtures(project(":renderer-android-daemon")))` so the harness's *test*
+ * `java.class.path` includes:
+ * - The android daemon's main classes (`DaemonMain`, `RobolectricHost`, `RenderEngine`,
+ *   `RenderSpec`, `PreviewManifestRouter`).
+ * - Robolectric + JUnit (declared `implementation(...)` on the daemon module per B1.3 — the
+ *   sandbox-holder pattern requires them on the *main* classpath, not just test).
+ * - The android testFixtures composables (`RedSquare`, `BlueSquare`, `GreenSquare`, `SlowSquare`,
+ *   `BoomComposable`) at FQN `ee.schimke.composeai.daemon.RedFixturePreviewsKt`.
+ * - androidx.compose runtime/foundation/ui (transitive via the daemon module's runtime classpath).
+ *
+ * Production classpath is unaffected — the renderer-agnostic invariant from
+ * [DESIGN § 4](../../../../docs/daemon/DESIGN.md#renderer-agnostic-surface) holds where it matters.
+ *
+ * **System properties on the spawned JVM.** Mirror [RealDesktopHarnessLauncher]'s plus the
+ * Robolectric-specific ones from `AndroidPreviewClasspath.RobolectricSystemProps`
+ * (gradle-plugin/.../AndroidPreviewClasspath.kt). The harness duplicates the *subset* that the
+ * daemon's render path actually relies on — graphics mode, looper mode, conscrypt, pixel-copy,
+ * roborazzi record. The `composeai.fonts.cacheDir` / `composeai.fonts.offline` props are not passed
+ * because the fixture composables don't use Google Fonts; if a future fixture does, surface those
+ * here too.
+ *
+ * **JVM args.** Robolectric on JDK 17+ requires `--add-opens` for `java.lang`, `java.lang.reflect`,
+ * and `java.nio` — same set [`AndroidPreviewClasspath.buildJvmArgs`][
+ * ee.schimke.composeai.plugin.AndroidPreviewClasspath] returns for the standalone Robolectric test
+ * path. Without these the daemon JVM aborts in `ShadowVMRuntime` static init before reaching the
+ * JSON-RPC read loop.
+ *
+ * **Heavy spawn cost.** Robolectric sandbox bootstrap (the dummy-`@Test` runner trick from DESIGN §
+ * 9 + B1.3) costs roughly 3-10s on a typical dev machine — at least an order of magnitude higher
+ * than the desktop launcher's ~600ms cold. Use 60s `renderStarted` and 120s `renderFinished`
+ * timeouts in tests; the previous `:samples:android` `renderPreviews` task already proves the
+ * JVM-args / classpath shape works at this scale, so the cost is well-understood, just slow.
+ *
+ * No `composeai.harness.fixtureDir` — the real daemon doesn't read FakeHost fixtures.
+ */
+class RealAndroidHarnessLauncher(
+  private val rendersDir: File,
+  private val previewsManifest: File,
+  private val classpath: List<File>,
+  private val extraJvmArgs: List<String> = emptyList(),
+) : HarnessLauncher {
+
+  companion object {
+    /**
+     * Returns the spawned-daemon classpath the harness build wired up via
+     * `composeai.harness.androidDaemonClasspath` (a file listing one absolute JAR path per line).
+     * D-harness.v2's harness build resolves `:renderer-android-daemon`'s runtime classpath +
+     * testFixtures into that file at task execution time so the harness's plain JVM test runtime
+     * (which can't natively consume Android library variants) doesn't have to handle AGP variant
+     * resolution. Returns null if the property is unset — tests that need the Android daemon gate
+     * themselves with `Assume.assumeTrue(target == "android")` and the harness build only sets the
+     * property when `-Ptarget=android`-compatible test runs are configured.
+     */
+    fun classpathFromProperty(): List<File>? {
+      val path = System.getProperty("composeai.harness.androidDaemonClasspath") ?: return null
+      val file = File(path)
+      if (!file.isFile) return null
+      return file.readLines().filter { it.isNotBlank() }.map { File(it.trim()) }
+    }
+  }
+
+  override val name: String = "real-android"
+
+  override fun spawn(): Process {
+    require(rendersDir.isDirectory) {
+      "RealAndroidHarnessLauncher.spawn: rendersDir '${rendersDir.absolutePath}' is not a directory"
+    }
+    require(previewsManifest.isFile) {
+      "RealAndroidHarnessLauncher.spawn: previewsManifest '${previewsManifest.absolutePath}' " +
+        "must exist before spawning (write the JSON before calling HarnessClient.start)"
+    }
+    val javaBin = File(System.getProperty("java.home"), "bin/java")
+    val cpString = classpath.joinToString(File.pathSeparator) { it.absolutePath }
+    val command =
+      buildList<String> {
+        add(javaBin.absolutePath)
+        // --add-opens for Robolectric on JDK 17+ — see KDoc for the rationale. Mirrors
+        // gradle-plugin's `AndroidPreviewClasspath.buildJvmArgs()`.
+        add("--add-opens=java.base/java.lang=ALL-UNNAMED")
+        add("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
+        add("--add-opens=java.base/java.nio=ALL-UNNAMED")
+        // Render output directory.
+        add("-Dcomposeai.render.outputDir=${rendersDir.absolutePath}")
+        // Wire the manifest router (same as desktop).
+        add("-Dcomposeai.harness.previewsManifest=${previewsManifest.absolutePath}")
+        // Robolectric system properties — the daemon's @Config / @GraphicsMode annotations on
+        // `SandboxHoldingRunner` already pin most of these, but belt-and-braces keeps a future
+        // annotation-stripping refactor from breaking renders. Order matches
+        // `AndroidPreviewClasspath.buildSystemProperties` for diff-friendly comparison.
+        add("-Drobolectric.graphicsMode=NATIVE")
+        add("-Drobolectric.looperMode=PAUSED")
+        add("-Drobolectric.conscryptMode=OFF")
+        add("-Drobolectric.pixelCopyRenderMode=hardware")
+        add("-Droborazzi.test.record=true")
+        // Pin Robolectric to SDK 35 — `SandboxHoldingRunner`'s @Config(sdk=[35]) already does this,
+        // but JDK 17 + SDK 36 emits the "won't be run" warning early in sandbox bootstrap and
+        // some Robolectric paths fall back to defaults if the annotation is misread. Belt-and-
+        // braces; doesn't hurt when the annotation already pins.
+        add("-Drobolectric.config.sdk=35")
+        // Idle timeout — keep parity with the desktop launcher. Note: Robolectric sandbox bootstrap
+        // can dominate the first render's wall-clock; tests should use a large *poll* timeout
+        // (60-120s) rather than relying on this idle timeout to back-stop a hung daemon.
+        add("-Dcomposeai.daemon.idleTimeoutMs=2000")
+        addAll(extraJvmArgs)
+        add("-cp")
+        add(cpString)
+        add("ee.schimke.composeai.daemon.DaemonMain")
+      }
+    return ProcessBuilder(command)
+      .redirectErrorStream(false)
+      .redirectInput(ProcessBuilder.Redirect.PIPE)
+      .redirectOutput(ProcessBuilder.Redirect.PIPE)
+      .redirectError(ProcessBuilder.Redirect.PIPE)
+      .start()
+  }
+}
